// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimeCard /> renders TimeCard with title from entity 1`] = `
.emotion-0 {
  all: unset;
  padding: 1rem;
  position: relative;
  overflow: hidden;
  border-radius: 1rem;
  width: var(--ha-device-time-card-width);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  cursor: default;
  background-color: var(--ha-S200);
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
  -webkit-transition: all 0.2s cubic-bezier(0.06, 0.67, 0.37, 0.99);
  transition: all 0.2s cubic-bezier(0.06, 0.67, 0.37, 0.99);
}

.emotion-0:hover {
  background-color: var(--ha-S300);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-3 {
  all: unset;
  font-size: 2rem;
  color: var(--ha-primary-color);
  font-weight: 400;
}

.emotion-4 {
  all: unset;
  font-size: 2rem;
  color: var(--ha-secondary-color);
  font-weight: 300;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="emotion-0"
  data-testid="time-card"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
      wrap="nowrap"
    >
      <span />
      <h4
        class="emotion-3"
      >
        01:01
      </h4>
      <h4
        class="emotion-4"
      >
        AM
      </h4>
    </div>
    <div
      class="emotion-5"
    >
      Wednesday, July 19th, 2023
    </div>
  </div>
</div>
`;

exports[`<TimeCard /> should render with the icon 1`] = `
.emotion-0 {
  all: unset;
  padding: 1rem;
  position: relative;
  overflow: hidden;
  border-radius: 1rem;
  width: var(--ha-device-time-card-width);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  cursor: default;
  background-color: var(--ha-S200);
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
  -webkit-transition: all 0.2s cubic-bezier(0.06, 0.67, 0.37, 0.99);
  transition: all 0.2s cubic-bezier(0.06, 0.67, 0.37, 0.99);
}

.emotion-0:hover {
  background-color: var(--ha-S300);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-3 {
  all: unset;
  font-size: 2rem;
  color: var(--ha-primary-color);
  font-weight: 400;
}

.emotion-4 {
  all: unset;
  font-size: 2rem;
  color: var(--ha-secondary-color);
  font-weight: 300;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="emotion-0"
  data-testid="time-card"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
      wrap="nowrap"
    >
      <h4
        class="emotion-3"
      >
        01:01
      </h4>
      <h4
        class="emotion-4"
      >
        AM
      </h4>
    </div>
    <div
      class="emotion-5"
    >
      Wednesday, July 19th, 2023
    </div>
  </div>
</div>
`;

exports[`<TimeCard /> should render without the date 1`] = `
.emotion-0 {
  all: unset;
  padding: 1rem;
  position: relative;
  overflow: hidden;
  border-radius: 1rem;
  width: var(--ha-device-time-card-width);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  cursor: default;
  background-color: var(--ha-S200);
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
  -webkit-transition: all 0.2s cubic-bezier(0.06, 0.67, 0.37, 0.99);
  transition: all 0.2s cubic-bezier(0.06, 0.67, 0.37, 0.99);
}

.emotion-0:hover {
  background-color: var(--ha-S300);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-3 {
  all: unset;
  font-size: 2rem;
  color: var(--ha-primary-color);
  font-weight: 400;
}

.emotion-4 {
  all: unset;
  font-size: 2rem;
  color: var(--ha-secondary-color);
  font-weight: 300;
}

<div
  class="emotion-0"
  data-testid="time-card"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
      wrap="nowrap"
    >
      <span />
      <h4
        class="emotion-3"
      >
        01:01
      </h4>
      <h4
        class="emotion-4"
      >
        AM
      </h4>
    </div>
  </div>
</div>
`;

exports[`<TimeCard /> should render without the icon 1`] = `
.emotion-0 {
  all: unset;
  padding: 1rem;
  position: relative;
  overflow: hidden;
  border-radius: 1rem;
  width: var(--ha-device-time-card-width);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  cursor: default;
  background-color: var(--ha-S200);
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
  -webkit-transition: all 0.2s cubic-bezier(0.06, 0.67, 0.37, 0.99);
  transition: all 0.2s cubic-bezier(0.06, 0.67, 0.37, 0.99);
}

.emotion-0:hover {
  background-color: var(--ha-S300);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-3 {
  all: unset;
  font-size: 2rem;
  color: var(--ha-primary-color);
  font-weight: 400;
}

.emotion-4 {
  all: unset;
  font-size: 2rem;
  color: var(--ha-secondary-color);
  font-weight: 300;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="emotion-0"
  data-testid="time-card"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
      wrap="nowrap"
    >
      <h4
        class="emotion-3"
      >
        01:01
      </h4>
      <h4
        class="emotion-4"
      >
        AM
      </h4>
    </div>
    <div
      class="emotion-5"
    >
      Wednesday, July 19th, 2023
    </div>
  </div>
</div>
`;
